--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,3 +2,16 @@
 logging:
   level:
     com.study.example.rest: debug
+
+#freemarker引擎模板
+spring:
+  freemarker:
+    template-loader-path: classpath:/templates/  # classpath:  一定不能漏写
+    cache: false
+    charset: UTF-8
+    check-template-location: true
+    content-type: text/html
+    expose-request-attributes: false
+    expose-session-attributes: false
+    request-context-attribute: req
+    suffix: .html
